Update color configurations and theme settings for improved visual consistency
- Adjusted color values in fuzzel, ghostty, GTK, and Hyprland configurations to align with the updated Material You theme.
- Enhanced background, text, selection, and border colors for a cohesive user experience.
- Updated wallpaper paths in illogical-impulse and hyprlock configurations for better usability.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -96,7 +96,7 @@
       "workspaceZoom": 1
     },
     "thumbnailPath": "/home/ultimatebrok/.local/state/quickshell/user/generated/wallpaper/mpvpaper_thumbnails/mylivewallpapers-com-Hi-Tech-User-Interface-FHD.mp4.jpg",
-    "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/windows-11-bloom-8k-3840x2160-16834.jpg",
+    "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/windows-11-bloom-3840x2160-16800.png",
     "widgets": {
       "clock": {
         "cookie": {
@@ -255,7 +255,7 @@
       "floorp",
       "com.mitchellh.ghostty"
     ],
-    "pinnedOnStartup": true
+    "pinnedOnStartup": false
   },
   "enabledPanels": [
     "iiBar",
@@ -307,7 +307,7 @@
     },
     "night": {
       "automatic": true,
-      "colorTemperature": 4900,
+      "colorTemperature": 3616,
       "from": "19:00",
       "to": "06:30"
     }
