Update appearance and behavior settings in configuration files for enhanced user experience
- Added new options for workspace labels, window titles, and active workspace highlighting in the interface configuration.
- Introduced background opacity adjustment and window transition animations for improved visual feedback.
- Streamlined the overall settings structure for better organization and usability.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -124,9 +124,9 @@ general {
     # layout = dwindle
     layout = master
 
-    # FM‑7 : Packet Storm (electric cyan → hazard yellow)
-    col.active_border   = rgba(00141aee) rgba(00ffddee) rgba(faff00ee) rgba(00141aee) 75deg
-    col.inactive_border = rgba(00141a88) rgba(00ffdd44) rgba(faff0044) rgba(00141a88) 75deg
+    # FM‑1 : Glitch Rain Fracture (terminal green → toxic cyan)
+    col.active_border   = rgba(001610ee) rgba(00ff55ee) rgba(00ffddee) rgba(001610ee) 95deg
+    col.inactive_border = rgba(00161088) rgba(00ff5544) rgba(00ffdd44) rgba(00161088) 95deg
 
     # Gaps and border
     gaps_in = 3
