Update notification settings and layout for enhanced user experience
- Adjusted transparency values in the illogical-impulse configuration for improved visual clarity.
- Changed notification positioning from bottom-right to top-right, aligning with user preferences.
- Introduced a bottomAlign property in NotificationGroup and NotificationListView for flexible layout options.
- Refactored NotificationPopup to dynamically adjust its layout based on the selected notification position, enhancing accessibility.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": null,
-            "contentTransparency": null,
+            "backgroundTransparency": 0.11,
+            "contentTransparency": 0.57,
             "enable": true
         },
         "wallpaperTheming": {
@@ -259,7 +259,7 @@
             "floorp",
             "com.mitchellh.ghostty"
         ],
-        "pinnedOnStartup": true
+        "pinnedOnStartup": false
     },
     "enabledPanels": [
         "iiBar",
@@ -343,7 +343,7 @@
         "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36"
     },
     "notifications": {
-        "position": "bottom-right",
+        "position": "top-right",
         "timeout": 10000
     },
     "osd": {
