Update color configurations and theme settings for improved visual consistency
- Adjusted color values in fuzzel, ghostty, GTK, and Hyprland configurations to align with the updated theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated wallpaper paths in illogical-impulse and hyprlock configurations for improved usability.
- Modified execs.conf to streamline startup processes and improve performance.

--- a/config/hypr/hyprland/execs.conf
+++ b/config/hypr/hyprland/execs.conf
@@ -9,7 +9,7 @@ exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISP
 
 # Quickshell - start after D-Bus is ready to avoid PolkitAgent registration delays
 exec-once = qs -c $qsConfig &
-exec-once = ~/.config/hypr/hyprland/scripts/__restore_video_wallpaper.sh
+# exec-once = ~/.config/hypr/hyprland/scripts/__restore_video_wallpaper.sh
 
 # Input method (merged from custom/execs.conf)
 exec-once = fcitx5
@@ -23,7 +23,7 @@ exec-once = sleep 1 && ~/.config/hypr/hyprland/scripts/play_sound.sh desktop-log
 exec-once = easyeffects --gapplication-service
 
 # Clipboard: history
-# exec-once = wl-paste --watch cliphist store &
+# exec-once = wl-paste --watch cliphist store &3
 exec-once = wl-paste --type text --watch bash -c 'cliphist store && qs -c $qsConfig ipc call cliphistService update'
 exec-once = wl-paste --type image --watch bash -c 'cliphist store && qs -c $qsConfig ipc call cliphistService update'
 
@@ -32,4 +32,4 @@ exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 
 # Fix dock pinned apps not launching properly (https://github.com/end-4/dots-hyprland/issues/2200)
 # This causes https://github.com/end-4/dots-hyprland/issues/2427
-exec-once = sleep 3.5 && hyprctl reload && sleep 0.5 && touch ~/.config/quickshell/ii/shell.qml
+# exec-once = sleep 3.5 && hyprctl reload && sleep 0.5 && touch ~/.config/quickshell/ii/shell.qml
