Update configuration files for improved functionality and performance
- Updated fish initialization variable for better compatibility.
- Adjusted monitor configuration timestamps and positions for accurate display settings.
- Changed window rule version in Hyprland color settings for consistency.
- Refactored general configuration to improve readability and maintainability.
- Enhanced illogical-impulse configuration with refined transparency settings and toggles.
- Implemented file existence checks in media controls for efficient cover art management.
- Optimized WiFi network sorting and update mechanisms for better user experience.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -376,19 +376,19 @@ xwayland {
 }
 
 # Overview
-plugin {
-    hyprscrolling {
-        column_width = 0.95
-        fullscreen_on_one_column = true
-    }
-    hyprexpo {
-        columns = 4
-        gap_size = 10
-        bg_col = rgb(000000)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+# plugin {
+#     hyprscrolling {
+#         column_width = 0.95
+#         fullscreen_on_one_column = true
+#     }
+#     hyprexpo {
+#         columns = 4
+#         gap_size = 10
+#         bg_col = rgb(000000)
+#         workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
 
-        enable_gesture = false # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = false
-    }
-}
+#         enable_gesture = false # laptop touchpad, 4 fingers
+#         gesture_distance = 300 # how far is the "max"
+#         gesture_positive = false
+#     }
+# }
