Update color configurations and theme settings for enhanced visual consistency
- Adjusted color values in fuzzel, ghostty, GTK, and Hyprland configurations to align with the updated theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated wallpaper paths in illogical-impulse and hyprlock configurations for improved usability.
- Modified monitor configuration timestamps and positions for accurate display settings.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(8e8fa6AA)
-#     col.inactive_border = rgba(444559AA)
+#     col.active_border = rgba(8b919bAA)
+#     col.inactive_border = rgba(414750AA)
 # }
 
 misc {
-    background_color = rgba(12131cFF)
+    background_color = rgba(0d141cFF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(1a1b25FF)
-        col.text = rgba(e3e1efFF)
+        bar_color = rgba(151c24FF)
+        col.text = rgba(dde3eeFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e3e1ef), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e3e1ef), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e3e1ef), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(dde3ee), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(dde3ee), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(dde3ee), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev3 = bordercolor rgba(71d2ffAA) rgba(71d2ff77),pinned:1
+windowrulev3 = bordercolor rgba(9ccaffAA) rgba(9ccaff77),pinned:1
