Update configuration files for improved monitor management and transparency settings
- Commented out monitor configurations in Hyprland to prevent conflicts with nwg-displays.
- Adjusted VRR setting in Hyprland configuration for enhanced performance.
- Set transparency values to null in illogical-impulse configuration for better default handling.
- Fixed a crash issue in Lock.qml by using a non-negative value for reserved area adjustments.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -1,8 +1,10 @@
 # MONITOR CONFIG
 # HDMI on the left, eDP-1 on the right - 2880x1800
+# NOTE: Monitor configs are now managed by nwg-displays in monitors.conf
+# Commented out to avoid conflicts with monitors.conf
 
-monitor = eDP-1, 1920x1200@120, 1920x0, 1, bitdepth, 10, vrr, 2
-monitor = HDMI-A-1, 1920x1080@75, 0x0, 1, bitdepth, 10, vrr, 2
+# monitor = eDP-1, 1920x1200@120, 1920x0, 1, bitdepth, 10, vrr, 2
+# monitor = HDMI-A-1, 1920x1080@75, 0x0, 1, bitdepth, 10, vrr, 2
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
@@ -341,7 +343,7 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
     vfr = 1
-    vrr = 1
+    vrr = 3
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
     animate_manual_resizes = false
