Update color configurations and theme settings for improved visual consistency
- Adjusted color values in fuzzel, ghostty, GTK, and Hyprland configurations to align with the updated theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated wallpaper paths in illogical-impulse and hyprlock configurations for improved usability.
- Refined battery indicator animations for smoother visual feedback during charging.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": 0.11,
-            "contentTransparency": 0.57,
+            "backgroundTransparency": null,
+            "contentTransparency": null,
             "enable": true
         },
         "wallpaperTheming": {
@@ -96,7 +96,7 @@
             "workspaceZoom": 1
         },
         "thumbnailPath": "/home/ultimatebrok/.local/state/quickshell/user/generated/wallpaper/mpvpaper_thumbnails/mylivewallpapers-com-Hi-Tech-User-Interface-FHD.mp4.jpg",
-        "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/macos-tahoe-26-6016x6016-22673.jpg",
+        "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/windows-11-stock-official-colorful-3840x2160-5658.jpg",
         "widgets": {
             "clock": {
                 "cookie": {
@@ -256,8 +256,8 @@
             "code-insiders",
             "cursor",
             "tradingview",
-            "floorp",
-            "anytype"
+            "anytype",
+            "floorp"
         ],
         "pinnedOnStartup": false
     },
