Update battery indicator visuals and configuration settings for improved user experience
- Adjusted transparency settings in the illogical-impulse configuration for better visual clarity.
- Enhanced battery indicator logic in both bar and vertical modules to maintain stable visuals during charging.
- Updated properties to reflect charging state more accurately, improving animation responsiveness and user feedback.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": null,
-            "contentTransparency": null,
+            "backgroundTransparency": 0.11,
+            "contentTransparency": 0.57,
             "enable": true
         },
         "wallpaperTheming": {
@@ -259,7 +259,7 @@
             "anytype",
             "floorp"
         ],
-        "pinnedOnStartup": false
+        "pinnedOnStartup": true
     },
     "enabledPanels": [
         "iiBar",
