Update configuration files for improved transparency settings and package management
- Adjusted transparency values in the illogical-impulse configuration for enhanced visual clarity.
- Changed the pinnedOnStartup property to false for better startup behavior.
- Updated package lists in all-packages.txt and aur-packages.txt to reflect recent changes, including the addition of new packages and removal of deprecated ones.
- Modified npm-global-packages.txt to update the version of the @sourcegraph/amp package for improved functionality.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": 0.11,
-            "contentTransparency": 0.57,
+            "backgroundTransparency": 0.08003741331116682,
+            "contentTransparency": 0.2784699690592676,
             "enable": true
         },
         "wallpaperTheming": {
@@ -259,7 +259,7 @@
             "anytype",
             "floorp"
         ],
-        "pinnedOnStartup": true
+        "pinnedOnStartup": false
     },
     "enabledPanels": [
         "iiBar",
