Update color configurations and monitor settings for enhanced visual consistency and functionality
- Adjusted color values in fuzzel, ghostty, GTK, and Hyprland configurations to align with the updated theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated monitor configuration positions for accurate display settings.
- Modified wallpaper paths in hyprlock and illogical-impulse configurations for improved usability.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(86948dAA)
-#     col.inactive_border = rgba(3d4944AA)
+#     col.active_border = rgba(8b919bAA)
+#     col.inactive_border = rgba(414750AA)
 # }
 
 misc {
-    background_color = rgba(0a1611FF)
+    background_color = rgba(0d141cFF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(121e1aFF)
-        col.text = rgba(d8e6deFF)
+        bar_color = rgba(151c24FF)
+        col.text = rgba(dde3eeFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(d8e6de), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(d8e6de), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(d8e6de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(dde3ee), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(dde3ee), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(dde3ee), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev3 = bordercolor rgba(00e0b2AA) rgba(00e0b277),pinned:1
+windowrulev3 = bordercolor rgba(9ccaffAA) rgba(9ccaff77),pinned:1
