Enhance Fish and Hyprland configurations for improved user experience, add Niri config
- Added new variables in Fish configuration for exit status display and signal conversion.
- Updated Hyprland environment settings for Wine applications to optimize performance and stability on XWayland.
- Refined window rules for Wine applications to reduce input lag and improve interaction consistency.

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -170,14 +170,17 @@ windowrule = no_blur on, match:xwayland true
 windowrule = no_shadow on, match:xwayland true
 windowrule = no_anim on, match:xwayland true
 
-# Wine applications
+# Wine applications — ổn định tương tác trên XWayland:
+# - immediate: giảm input lag, hạn chế lỗi focus (cần allow_tearing trong general)
+# - no_blur/no_shadow/no_anim: giảm tải compositor, dialog/popup ít bị kẹt
+# Nếu dialog Wine không nhận click: trong winecfg tắt "Emulate a virtual desktop"
 windowrule = immediate on, match:title .*\.exe
 windowrule = immediate on, match:class ^(?i)wine.*
 windowrule = immediate on, match:class ^(?i)wine64.*
 windowrule = immediate on, match:class ^(?i)wine32.*
-# windowrule = no_blur on, match:class ^(?i)wine.*
-# windowrule = no_shadow on, match:class ^(?i)wine.*
-# windowrule = no_anim on, match:class ^(?i)wine.*
+windowrule = no_blur on, match:class ^(?i)wine.*
+windowrule = no_shadow on, match:class ^(?i)wine.*
+windowrule = no_anim on, match:class ^(?i)wine.*
 
 # Gaming
 windowrule = immediate on, match:title .*minecraft.*
