--- a/config/hypr/hyprland/env.conf
+++ b/config/hypr/hyprland/env.conf
@@ -16,30 +16,23 @@ env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 # Giữ font nét cho ứng dụng chạy bằng Wine (XWayland):
 # - FREETYPE_PROPERTIES bật hinting ClearType (v40) để hạn chế blur
 # - WINE_FULLSCREEN_INTEGER_SCALING đảm bảo Wine dùng integer scaling thay vì fractional
-# env = FREETYPE_PROPERTIES,truetype:interpreter-version=40
-# env = WINE_FULLSCREEN_INTEGER_SCALING,1
+env = FREETYPE_PROPERTIES,truetype:interpreter-version=40
+env = WINE_FULLSCREEN_INTEGER_SCALING,1
 
-# # Performance optimizations for Wine
-# # Enable DXVK/VKD3D for better graphics performance
-# env = DXVK_STATE_CACHE_PATH,$HOME/.cache/dxvk-state-cache
-# env = DXVK_LOG_LEVEL,none
-# env = VKD3D_SHADER_CACHE_PATH,$HOME/.cache/vkd3d-shader-cache
+# Performance optimizations for Wine (DXVK/VKD3D)
+env = DXVK_STATE_CACHE_PATH,$HOME/.cache/dxvk-state-cache
+env = DXVK_LOG_LEVEL,none
+env = VKD3D_SHADER_CACHE_PATH,$HOME/.cache/vkd3d-shader-cache
 
-# # Wine performance settings
-# env = WINEARCH,win64
-# env = WINEPREFIX,$HOME/.wine
-# # Reduce Wine overhead
-# env = WINEDEBUG,-all
-# # Enable Wine's built-in optimizations
-# env = WINE_LARGE_ADDRESS_AWARE,1
-# # Use native DLLs when possible for better performance
-# env = WINEDLLOVERRIDES,winemenubuilder.exe=d
+# Wine stability & interaction on Wayland/XWayland:
+# - WINEDEBUG=-all giảm overhead, tránh lag khi tương tác
+# - Quan trọng: chạy winecfg → Graphics → bỏ chọn "Emulate a virtual desktop"
+#   (virtual desktop gây lỗi focus/input trên XWayland)
+env = WINEDEBUG,-all
+env = WINE_LARGE_ADDRESS_AWARE,1
+env = WINEDLLOVERRIDES,winemenubuilder.exe=d
 
-# env = GDK_SCALE, 1
-# env = GDK_DPI_SCALE, 1
-
-# XWayland performance
-# Force XWayland to use hardware acceleration
+# XWayland: bật GLAMOR (0 = use glamor) để hardware acceleration
 env = XWAYLAND_NO_GLAMOR,0
 
 # ############ Themes #############
