Update color configurations and theme settings for improved visual consistency
- Adjusted color values across KDE, GTK, and Hyprland configurations to align with the new theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated volume mixer commands in the illogical-impulse configuration for better usability.
- Refined transparency settings in various modules for improved visual clarity.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -75,7 +75,8 @@
     "taskManager": "plasma-systemmonitor --page-name Processes",
     "terminal": "kitty -1",
     "update": "kitty -1 --hold=yes fish -i -c 'sudo pacman -Syu'",
-    "volumeMixer": "~/.config/hypr/hyprland/scripts/launch_first_available.sh \"pavucontrol-qt\" \"pavucontrol\""
+    "volumeMixer": "~/.config/hypr/hyprland/scripts/launch_first_available.sh \"pavucontrol-qt -t 3\" \"pavucontrol -t 3\"",
+    "volumeMixerInput": "~/.config/hypr/hyprland/scripts/launch_first_available.sh \"pavucontrol-qt -t 4\" \"pavucontrol -t 4\""
   },
   "audio": {
     "protection": {
@@ -96,7 +97,7 @@
       "workspaceZoom": 1
     },
     "thumbnailPath": "/home/ultimatebrok/.local/state/quickshell/user/generated/wallpaper/mpvpaper_thumbnails/mylivewallpapers-com-Hi-Tech-User-Interface-FHD.mp4.jpg",
-    "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/sea-men-ERd52c7VSrc-unsplash.jpg",
+    "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/windows-11-dark-mode-stock-official-black-background-3840x2401-5668.jpg",
     "widgets": {
       "clock": {
         "cookie": {
