--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(929188AA)
-#     col.inactive_border = rgba(47473fAA)
+#     col.active_border = rgba(9b8c9bAA)
+#     col.inactive_border = rgba(4e4350AA)
 # }
 
 misc {
-    background_color = rgba(141312FF)
+    background_color = rgba(171118FF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(1c1c1aFF)
-        col.text = rgba(e5e2dfFF)
+        bar_color = rgba(201a21FF)
+        col.text = rgba(ebdfe9FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e5e2df), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e5e2df), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e5e2df), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(ebdfe9), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(ebdfe9), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(ebdfe9), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev3 = bordercolor rgba(c7c8b2AA) rgba(c7c8b277),pinned:1
+windowrulev3 = bordercolor rgba(75d7caAA) rgba(75d7ca77),pinned:1
