Update color configurations and theme settings for enhanced visual consistency
- Adjusted color values across KDE, GTK, and Hyprland configurations to align with the new theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated wallpaper paths in illogical-impulse and hyprlock configurations for improved usability.
- Refined transparency settings in various modules for better visual clarity.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -165,7 +165,7 @@ decoration {
         xray = true
         special = true
         new_optimizations = true
-        size = 3
+        size = 2
         passes = 1
         brightness = 1
         noise = 0
@@ -245,11 +245,12 @@ animations {
     # MACOS-STYLE WINDOW ANIMATIONS
     # ============================================================================
     # Smooth scale and fade for window opening/closing
-    animation = windowsIn, 1, 4.5, macWindowOpen, popin 87%
-    animation = windowsOut, 1, 4, macWindowClose, popin 87%
-    animation = windowsMove, 1, 4, macFluid, slide
-    animation = border, 1, 4, macUISmooth
-    animation = borderangle, 1, 100, macUISmooth, loop
+    animation = windowsIn, 1, 3.5, macWindowOpen, popin 87%
+    animation = windowsOut, 1, 3, macWindowClose, popin 87%
+    animation = windowsMove, 1, 3, macFluid, slide
+    animation = border, 1, 3, macUISmooth
+
+    # animation = borderangle, 1, 100, macUISmooth, loop
     
     # ============================================================================
     # OLD WINDOW ANIMATIONS (COMMENTED FOR ROLLBACK)
@@ -268,10 +269,10 @@ animations {
     # MACOS-STYLE LAYER ANIMATIONS
     # ============================================================================
     # Smooth popups and overlays
-    animation = layersIn, 1, 4, macEaseOut, slide
-    animation = layersOut, 1, 3.5, macEaseIn, slide
-    animation = fadeLayersIn, 1, 3, macUISmooth
-    animation = fadeLayersOut, 1, 2.5, macUISmooth
+    animation = layersIn, 1, 3, macEaseOut, slide
+    animation = layersOut, 1, 2.5, macEaseIn, slide
+    animation = fadeLayersIn, 1, 2.5, macUISmooth
+    animation = fadeLayersOut, 1, 2, macUISmooth
     
     # ============================================================================
     # OLD LAYER ANIMATIONS (COMMENTED FOR ROLLBACK)
@@ -287,11 +288,11 @@ animations {
     # MACOS-STYLE FADE ANIMATIONS
     # ============================================================================
     # Buttery smooth fades
-    animation = fadeIn, 1, 4, macSmooth
-    animation = fadeOut, 1, 3, macSmooth
-    animation = fadeSwitch, 1, 4, macEaseInOut
-    animation = fadeShadow, 1, 4, macEaseOut
-    animation = fadeDim, 1, 4, macFluid
+    animation = fadeIn, 1, 3, macSmooth
+    animation = fadeOut, 1, 2.5, macSmooth
+    animation = fadeSwitch, 1, 3, macEaseInOut
+    animation = fadeShadow, 1, 3, macEaseOut
+    animation = fadeDim, 1, 3, macFluid
     
     # ============================================================================
     # OLD FADE ANIMATIONS (COMMENTED FOR ROLLBACK)
@@ -308,9 +309,9 @@ animations {
     # MACOS-STYLE WORKSPACE ANIMATIONS
     # ============================================================================
     # Smooth workspace switching like Mission Control
-    animation = workspaces, 1, 4, macEaseInOut, slide
-    animation = specialWorkspaceIn, 1, 4, macOvershoot, slidevert
-    animation = specialWorkspaceOut, 1, 3, macSharp, slidevert
+    animation = workspaces, 1, 3, macEaseInOut, slide
+    animation = specialWorkspaceIn, 1, 3, macOvershoot, slidevert
+    animation = specialWorkspaceOut, 1, 2.5, macSharp, slidevert
     
     # ============================================================================
     # OLD WORKSPACE ANIMATIONS (COMMENTED FOR ROLLBACK)
