Update color configurations and theme settings for improved visual consistency
- Adjusted color values across fuzzel, ghostty, GTK, and Hyprland configurations to align with the new theme.
- Enhanced background, text, selection, and border colors for a more cohesive user experience.
- Updated transparency settings in illogical-impulse and hyprlock configurations for better visual clarity.
- Added support for dark mode in MaterialThemeLoader to improve theme adaptability.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
     },
     "transparency": {
       "automatic": true,
-      "backgroundTransparency": null,
-      "contentTransparency": null,
+      "backgroundTransparency": 0.11,
+      "contentTransparency": 0.57,
       "enable": true
     },
     "wallpaperTheming": {
@@ -474,6 +474,10 @@
           {
             "size": 1,
             "type": "audio"
+          },
+          {
+            "size": 1,
+            "type": "darkMode"
           }
         ]
       },
