--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(8e8fa6AA)
-#     col.inactive_border = rgba(444559AA)
+#     col.active_border = rgba(86948dAA)
+#     col.inactive_border = rgba(3d4944AA)
 # }
 
 misc {
-    background_color = rgba(12131cFF)
+    background_color = rgba(0a1611FF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(1a1b25FF)
-        col.text = rgba(e3e1efFF)
+        bar_color = rgba(121e1aFF)
+        col.text = rgba(d8e6deFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e3e1ef), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e3e1ef), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e3e1ef), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(d8e6de), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(d8e6de), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(d8e6de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev3 = bordercolor rgba(71d2ffAA) rgba(71d2ff77),pinned:1
+windowrulev3 = bordercolor rgba(00e0b2AA) rgba(00e0b277),pinned:1
