Update transparency and color settings for improved UI aesthetics
- Refined transparency values in the illogical-impulse configuration for enhanced visual clarity.
- Updated background and content colors in settings.qml to align with the new theme.
- Adjusted border properties in WallpaperSelectorContent.qml to enhance the glassmorphism effect across components.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": null,
-            "contentTransparency": null,
+            "backgroundTransparency": 0.08003741331116682,
+            "contentTransparency": 0.2784699690592676,
             "enable": true
         },
         "wallpaperTheming": {
