--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -260,7 +260,7 @@
             "floorp",
             "spotify"
         ],
-        "pinnedOnStartup": false
+        "pinnedOnStartup": true
     },
     "enabledPanels": [
         "iiBar",
