config: Update Hyprland decoration blur settings and modify illogical-impulse configuration options for improved UI behavior.

--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -162,10 +162,10 @@ decoration {
 
     blur {
         enabled = true
-        xray = true
-        special = true
+        xray = false
+        special = false
         new_optimizations = true
-        size = 5
+        size = 3
         passes = 1
         brightness = 1
         noise = 0
